--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,8 @@
   ],
   "parserOptions": {
     "ecmaVersion": 8
+  },
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   }
 }
