--- a/package.json
+++ b/package.json
@@ -25,9 +25,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^27.0.1",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
-    "react-native-elements": "^0.19.1"
+    "react-native-elements": "^0.19.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-axios-middleware": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
